	(w3m-check-refresh-attribute): Use it.
	(w3m-view-previous-page): When visiting pages by history-back or
	history-next, don't just ignore refresh, but wait for a while.
	(w3m-idle-images-show): When there are events pended, re-create the
	idle timer; Check current position's item every time loop starts.
	(w3m-idle-images-show-unqueue): Set w3m-idle-images-show-timer
	properly.

	* w3m-favicon.el (w3m-favicon-retrieve): Ditto.

2009-04-02  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-arrived-add): If url has a multi-byte character, do not
	do recursive-call itself. If decoded url does not have a multi-byte
	character, do not do recursive-call itself.

2009-03-28  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-goto-url-with-timer): When going to the same url, use
	`w3m-reload-this-page'.
	(w3m-image-no-idle-timer): New variable.
	(w3m-toggle-inline-images-internal): Use it.
	(w3m-arrived-add): Add also decoded url.
	(w3m-goto-url): Restore forms also when url is local.

2009-03-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-link-menu): Always provide title string.  Suggested by
	David Abrahams <dave@boostpro.com>.
	Cf. <URL:http://news.gmane.org/group/gmane.emacs.w3m/thread=8126>.

2009-03-17  Victor Ren  <victor.ren@ericsson.com>

	* w3m.el (w3m-url-to-file-name): Support "file://c:/" in addition to
	"file:///c:/".

2009-03-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-parse-header): The value of w3m-document-charset is
	not used excluding x-moe-internal.

2009-03-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-decode-buffer): If context-charset is x-moe-internal,
	x-moe-internal is used as charset regardless of w3m-type.
	(w3m-w3m-parse-header): Add w3m-document-charset to handle of the
	headers. If w3m-document-charset is x-moe-internal, charset sets to
	x-moe-internal compulsorily. If x-w3m-content-encoding is exist, the
	value of x-w3m-content-encoding is used as encoding method regardless
	of w3m-type.
